src/objects/CH_Outbound_Log__c.object
<CustomObject>
    <fields>
        <fullName>CH_Attachment_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Comment__c</fullName>
        <description>description of the error message</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_Interface_Type__c</fullName>
        <description>What are the type of Interface</description>
        <label>Interface Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Message_body__c</fullName>
        <description>will include the message body which can be resent at a later stage</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_Name__c</fullName>
        <description>description of the action - e.g. CAPS Metadata Update / Retention Period Update</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Number_of_Record_Processed__c</fullName>
        <description>Use to process the positive record</description>
        <label>Number of Record Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Number_of_Records_Failed__c</fullName>
        <description>Number of failure records</description>
        <label>Number of Records Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Number_of_Records_Success__c</fullName>
        <description>Number of successful records</description>
        <label>Number of Records Success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_Resend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_SF_Ticket_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SF Ticket Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CH Outbound Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CH_Message_body__c</columns>
        <columns>CH_Status__c</columns>
        <columns>CH_Comment__c</columns>
        <columns>CH_Interface_Type__c</columns>
        <columns>CH_Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CH_Outbound_Logs</fullName>
        <columns>NAME</columns>
        <columns>CH_Status__c</columns>
        <columns>CH_Created_Date__c</columns>
        <columns>CH_Attachment_Id__c</columns>
        <columns>CH_Comment__c</columns>
        <columns>CH_Interface_Type__c</columns>
        <columns>CH_SF_Ticket_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>CH Outbound Logs</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Outbound Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CH Outbound Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>